--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Installing surge
       run: npm install --g surge
     - name: deploying using surge
-      run: surge ./ covid19_tracker_app_by_kamran_haider.surge.sh --token ${{ secrets.surge_token }}
+      run: surge ./ covid19_tracker_app_by_kamran_haider.surge.sh --token ${{ secrets.SURGE_TOKEN }}
       
